# perigon_news_wrapper

./: .gitignore  README.md  pyproject.toml
perigon_news_wrapper/: __init__.py  perigon.py
tests/: test_import.py  test_query_base.py  test_query_pagination.py
